# physics

./: Ginzburg_Landau_eq.ipynb  Q_Ideal_Gas.ipynb  README.md  computation_loop2.0.cpp  flow.py  network.ipynb  network_new.py
Ginzburg-Landau-equation/: Ginzburg_Landau_eq.ipynb
Quantum_Ideal_Gas/: Q_Ideal_Gas.ipynb
Sine_Gordon_equation/fourier-sg-lib/: README.md  pyproject.toml
Sine_Gordon_equation/fourier-sg-lib/examples/: breathers.py  breathers_collision.py  kink_run.py  kinkatikink.py  params.json
Sine_Gordon_equation/fourier-sg-lib/src/fourier_sg_lib/: __init__.py  drawing_tool.py
Sine_Gordon_equation/fourier-sg-lib/src/fourier_sg_lib/mathematics/: sg_soliton_functions.py  two_soliton_start.py
Sine_Gordon_equation/fourier-sg-lib/src/fourier_sg_lib/numerics/: measure.py  split_step_Fourier.py
Sine_Gordon_equation/fourier-sg-lib/tests/: numerics.txt  params.json  test_integrate.py
