[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-sg-lib"
version = "1.0.5"
authors = [
    { name="Jan Kierzkowski" }
]
description = "Sine-Gordon soliton and numerical library"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
